  Bugfix: Diff view highlighted last char diff incorrectly (#2785186)
  Bugfix: Could select prediffer when plugins were disabled (#2787131)
  Bugfix: File compare HTML reports use invald DOCTYPE (#2783477)
  Bugfix: "##" in file filter pattern caused an infinite loop (#2789345)
  Bugfix: File wm_*.* in temporary folder caused an infinite loop (#2789348)

WinMerge 2.13.6 - 2009-04-16 (r6665)
  Show deleted differences in difference highlight with own
    color (#2669526)
  Disable folder compare tree-view by default (#2714968)
  Allow setting codepage from command line (#2725549)
  Improve detecting XML files in file compare (#2726531)
  Installer: Don't install heksedit (r6659)
  Bugfix: Says files are identical after making files different in another
    application and re-loading them (#2672737)
  Bugfix: Difference pane didn't show added lines (#2710146)
  Bugfix: Did not show difference at end of line (#2638045)
  Bugfix: Files with missing last EOL weren't merged correctly (#2712120)
  Bugfix: When conflict file saved trailing line-ending was lost (#2550412)
  Translation updates:
  - Czech (r6581)
  - Polish (#2717382, #2720875)

WinMerge 2.13.5 - 2009-03-19 (r6579)
  Remember last target folder for Copy/Move to in folder compare (#2659228)
  Add shortcut for Discard All in save confirmation dialog (#2559560)
  Initialize folder selection dialog to currently selected folder in
    options dialog (r6570)
  Expand/collapse folders from keyboard (#2203904)
  Bugfix: Filename extension column was empty for files (#2670046)
  Bugfix: Crash when selecting backup folder (#2686382)
  bugfix: Swapping panes did not update statusbar (#2661838)
  Translation updates:
  - Czech (r6530)
  - Dutch (#2672852)
  - Swedish (#2669562)

WinMerge 2.13.4 - 2009-03-03 (r6529)
  Add option for setting line difference wordbreak characters (#2655563)
  Put temp files to per-instance subfolder in temp folder (#2582768)
  Use new compare status icons for editor windows (#2205583)